fix: checkout page style align with figma

--- a/frontend/src/features/checkout/styles/CheckoutDetails.module.css
+++ b/frontend/src/features/checkout/styles/CheckoutDetails.module.css
@@ -6,33 +6,57 @@
 }
 
 .greeting {
+    font-family: 'Roboto', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+    line-height: 140%;
     font-size: 24px;
-    font-weight: bold;
     margin-bottom: 16px;
-    }
+}
 
 .addressSection {
     margin-bottom: 16px;
 }
 
 .address {
-    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+    line-height: 140%;
+    font-size: 16px;
     margin: 0;
 }
 
 .changeButton {
     background: none;
     border: none;
-    color: #007bff;
     text-decoration: underline;
     cursor: pointer;
     padding: 0;
     margin-top: 8px;
+    font-family: 'Roboto', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+    font-size: 16px;
+    line-height: 100%;
+    font-style: italic;
+    color: #1E1E1E;
 }
 
 .sectionTitle {
+    font-family: 'Roboto', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+    line-height: 140%;
     font-size: 20px;
-    font-weight: bold;
     margin: 16px 0 8px;
 }
 
@@ -64,6 +88,13 @@
     border: 1px solid #ccc;
     background: #fff;
     cursor: pointer;
+    font-family: 'Roboto', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+    font-size: 16px;
+    line-height: 140%;
 }
 
 .paymentOptions button.selected {
@@ -88,6 +119,13 @@
     cursor: pointer;
     margin-top: auto;
     transition: background 0.3s;
+    font-family: 'Roboto', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+    font-size: 16px;
+    line-height: 140%;
 }
 
 .checkoutButton:hover {
